--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;600&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +7,108 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  color: white;
+  font-family: 'Be Vietnam Pro', sans-serif;
+  padding: 0 2rem;
+  background-image: url('../public/bg.jpg');
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.container {
+  background-color: #343963;
+  max-width: 1000px;
+  padding: 3rem;
+  border-radius: 1rem;
+}
+
+.progress {
+  display: flex;
+  gap: 1em;
+  list-style: none;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 900px;
+}
+
+.progressBtn {
+  font-weight: 500;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.progressBtn.filled {
+  background-image: linear-gradient(#E65895, #BC6BE8);
+}
+
+.question {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.question-text {
+  text-align: center;
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin: 1em 0;
+  max-width: 6;
+}
+
+.options {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.option {
+  color: inherit;
+  border: 0;
+  margin: .5em 0;
+  background-color: #393F6F;
+  padding: 1.2em 1.25em;
+  border-radius: .8em;
+  width: 40%;
+  min-width: 200px;
+  box-sizing: border-box;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.option:hover {
+  cursor: pointer;
+}
+
+.option.choosed {
+  background-image: linear-gradient(#E65895, #BC6BE8);
+}
+
+.option:disabled {
+  cursor: not-allowed;
+}
+
+.btn-ui {
+  background-image: linear-gradient(#E65895, #BC6BE8);
+  border: 0;
+  outline: 0;
+  color: white
+}
+
+.next-btn {
+  display: block;
+  margin-top: 1em;
+  margin-left: auto;
 }
